--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -1,1 +1,21 @@
+name: Basic CI/CD Pipeline
 
+on:
+  push:
+    branches: [main]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20 '  # specify the Node.js version you need
+
+      - name: Install Dependencies
+        run: npm install
