--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -1,7 +1,7 @@
 name: CICD pipeline for PR and Cron_jobs
 on:
  schedule:
-  - cron: "*/1 * * * *"
+  - cron: "*/10 * * * *"
  push:
   branches: [main]
  pull_request:
@@ -14,3 +14,5 @@ jobs:
      uses: actions/checkout@v4
    - name: Running to check PR request
      run: echo "PR and push events are working successfully......"
+   - name: Show the current date and time
+     run: date
